fix: move page content into view and apply brand
The page content would be hidden under the navigation bar due to the
bar being in a fixed position. While tackling that problem, move the
'main' element to the top most layout component to remove redundancy
throughout all pages.

--- a/src/globals.css
+++ b/src/globals.css
@@ -1,4 +1,5 @@
 :root {
+  --color-site-1-rgb: 18, 18, 18; /* Hex: #121212 */
   --color-brand-1-rgb: 21, 35, 56; /* Hex: #152238 */
   --color-brand-1-c-1-rgb: 255, 255, 255; /* Hex: #000 */
   --color-brand-1-c-2-rgb: 255, 145, 102; /*Hex:  #FF9166 */
@@ -12,5 +13,11 @@
 
 html,
 body {
+  text-align: center;
   max-width: 100vw;
+  background-color: rgb(var(--color-site-1-rgb));
+}
+
+main {
+  margin-top: 70px;
 }
